--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,8 +7,8 @@ version: '3.8'
 services:
   node1:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
     # Map unique host port (8081) to the container port 8080 --- enables independent access to each instance on localhost
       - "8081:8080"
@@ -23,8 +23,8 @@ services:
 
   node2:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "8082:8080"
     environment:  
@@ -35,8 +35,8 @@ services:
 
   node3:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "8083:8080"
     environment:
