--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,28 +1,20 @@
-# Dockerfile define a containers image that installs Go, copies the project code, and sets up a working directory for running a DNS service using the Chord protocol.
-
-# Use the official Go image (based on Alpine Linux, which is lightweight and efficient) as the base image
-# Go version: 1.23
 FROM golang:1.23-alpine
 
-# Set the working directory inside the container to /app
-# All subsequent commands will be run from this directory
 WORKDIR /app
 
-# Copy the Go module files (to the /app directory)
-COPY go.mod ./
+# Copy the Go module files
+COPY go.mod go.sum ./
 
-# Download dependencies (listed in go.mod)
+# Download dependencies
 RUN go mod download
 
-# Copy application code (e.g. source code) to the working directory
+# Copy the rest of the code
 COPY . .
 
-# Build the Go application, creating an executable chord_dns
+# Build the application
 RUN go build -o chord_dns
 
-# Define the default command to run the application when the container starts
-CMD ["./chord_dns"]
+# The port will be specified in docker-compose.yml
+EXPOSE 8001
 
-# Expose the application port 8080
-### TODO modify if application runs on a different port ###
-EXPOSE 8080
+CMD ["./chord_dns"]
