--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,20 +1,33 @@
-FROM golang:1.23-alpine
+# Use Go 1.22
+FROM golang:1.22
 
+# Install necessary packages
+RUN apt-get update && apt-get install -y \
+    wget \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
 WORKDIR /app
 
-# Copy the Go module files
+# Copy go mod and sum files
 COPY go.mod go.sum ./
 
-# Download dependencies
+# Download all dependencies
 RUN go mod download
 
-# Copy the rest of the code
+# Copy the source code
 COPY . .
 
 # Build the application
-RUN go build -o chord_dns
+RUN go build -o chord_dns .
 
-# The port will be specified in docker-compose.yml
+# Expose the application port
 EXPOSE 8001
 
+# Add healthcheck
+HEALTHCHECK --interval=5s --timeout=3s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8001/health || exit 1
+
+# Command to run the application
 CMD ["./chord_dns"]
