--- a/docker/Dockerfile.node
+++ b/docker/Dockerfile.node
@@ -1,19 +1,21 @@
 # Base image for Go
 FROM golang:1.20
 
+# Set the working directory
 WORKDIR /app
 
-# Copy source code
+# Copy the source code into the container
 COPY . .
 
-# Install dependencies
-RUN go mod tidy
+# Enable Go modules
+ENV GO111MODULE=on
 
-# Build the application
+# Build the Go application
 RUN go build -o chord_dns .
 
-# Expose dynamic ports
+# Expose the application port
 EXPOSE 8080
 
-# Default command for interactive mode
-CMD ["./chord_dns", "-all"]
+# Run the application by default
+CMD ["./chord_dns"]
+
